ui: update colour plane style

--- a/Frontend/Styles.css
+++ b/Frontend/Styles.css
@@ -62,8 +62,8 @@
     --colour-secondary: #6ea3ee;
     --colour-tertiary: #6ea3ee;
 
-    --colour-aircraft: #ebbc21;
-    --colour-selected-aircraft: #e86c68;
+    --colour-aircraft: #920e45;
+    --colour-selected-aircraft: #d4209b;
 
 }
 
