ui: brighter selected aircraft in colour theme

--- a/Frontend/Styles.css
+++ b/Frontend/Styles.css
@@ -63,7 +63,7 @@
     --colour-tertiary: #6ea3ee;
 
     --colour-aircraft: #920e45;
-    --colour-selected-aircraft: #d4209b;
+    --colour-selected-aircraft: #de20a2;
 
 }
 
